Fixheader form duration flicker while rendering

--- a/components/Auth/AuthForm.module.scss
+++ b/components/Auth/AuthForm.module.scss
@@ -6,11 +6,15 @@
   align-items: center;
   padding: 0 2rem;
 
+  @include respond(notebook-867) {
+    align-items: flex-start;
+    padding: 10rem 2rem 0;
+  }
   @include respond(tablet-666) {
     height: calc(100vh - (7rem + 5rem));
   }
   @include respond(tablet-589) {
-    padding: 0 1rem;
+    padding: 8rem 1rem 0;
   }
   @include respond(tablet-480) {
     height: calc(100vh - (7rem + 4rem));
@@ -45,7 +49,6 @@
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
 
   @include respond(notebook-867) {
-    margin-top: -5rem;
     display: flex;
     justify-content: center;
     background-image: linear-gradient(
@@ -55,7 +58,6 @@
     );
   }
   @include respond(tablet-589) {
-    margin-top: -10rem;
     height: max-content;
     padding: 0 0 1rem;
   }
@@ -87,9 +89,6 @@
 }
 
 .control {
-  // display: grid;
-  // grid-template-rows: 5rem;
-  // grid-template-columns: 1fr 1fr 1fr;
   margin: 1.5rem 0 2rem;
   position: relative;
 
@@ -150,7 +149,6 @@
 .actions button {
   cursor: pointer;
   font: inherit;
-  // margin-bottom: 1rem;
 }
 
 .login,
@@ -165,7 +163,6 @@
   z-index: 2;
   box-shadow: 0 0.5rem 1rem rgba($color-black, 0.1);
   text-decoration: none;
-  // background-color: $color-secondary-dark;
   color: $color-black;
   overflow: hidden;
 
@@ -180,7 +177,6 @@
 
 .login:hover,
 .toggle:hover {
-  // transform: translateY(-.3rem);
   box-shadow: 0 1rem 1.5rem rgba($color-black, 0.2);
   color: $color-white;
 }
