--- a/components/Header/HeaderForm/HeaderForm.module.scss
+++ b/components/Header/HeaderForm/HeaderForm.module.scss
@@ -260,6 +260,20 @@
   }
 }
 
+.appear {
+  opacity: 0;
+  animation: appear 1s linear forwards;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .calendarContainer {
   position: absolute;
   top: 110%;
